WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210125
Web Inspector: unable to see cookies on pages that have subframes which have been denied access to cookies
https://bugs.webkit.org/show_bug.cgi?id=210125
Summary
Web Inspector: unable to see cookies on pages that have subframes which have ...
Devin Rousso
Reported
2020-04-07 09:48:13 PDT
# STEPS TO REPRODUCE: 1. inspect <
https://www.yahoo.co.jp
> 2. go to the storage tab => no cookies are shown for <
https://www.yahoo.co.jp
> 3. reload the page => cookies sometimes show for <
https://www.yahoo.co.jp
>
Attachments
Patch
(4.03 KB, patch)
2020-04-07 10:05 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2020-04-07 09:48:27 PDT
<
rdar://problem/61357992
>
Devin Rousso
Comment 2
2020-04-07 10:05:12 PDT
Created
attachment 395698
[details]
Patch
EWS
Comment 3
2020-04-07 11:19:23 PDT
Committed
r259649
: <
https://trac.webkit.org/changeset/259649
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395698
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug