Web Inspector: unable to see cookies on pages that have subframes which have been denied access to cookies https://bugs.webkit.org/show_bug.cgi?id=210125 <rdar://problem/61357992>

Reviewed by Timothy Hatcher.

Previously, the same boolean value was re-used when checking whether that URL and `document`
pairs is able to access cookies, meaning that if the last check returned `false`, the logic
would incorrectly think that none of the URL and `document` pairs would have access to any
cookies, resulting in an empty array.

Instead of using this all-or-nothing boolean, if a URL and `document` pair is not able to
access cookies, simply ignore it and move on to the next pair.

* inspector/agents/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::getCookies):


Canonical link: https://commits.webkit.org/223027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259649 268f45cc-cd09-0410-ab3c-d52691b4dbfc